optimising the database architecture